ganv (1.8.3) unstable; urgency=medium

  * Fix library current_version on MacOS
  * Update installation instructions

 -- David Robillard <d@drobilla.net>  Fri, 19 Jul 2024 00:49:05 +0000

ganv (1.8.2) stable; urgency=medium

  * Switch to meson build system

 -- David Robillard <d@drobilla.net>  Sat, 13 Aug 2022 22:12:49 +0000

ganv (1.8.0) stable; urgency=medium

  * Expand canvas automatically to fit nodes
  * Fix various compiler warnings

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 22:38:31 +0000

ganv (1.6.0) stable; urgency=medium

  * Add API to specify module port order.
  * Add support for PDF and PS export.
  * Add support for beveled box corners.
  * Add support for edges that do not constrain the layout.
  * Dampen sprung layout energy over time to prevent oscillation.
  * Distinguish edge color from port color slighly.
  * Fix compilation with --no-fdgl (patch from Vlad Glagolev).
  * Fix crash when destroying canvas.
  * Fix port position on modules with embedded widgets.
  * Fix positioning of embedded widgets when changing layout.
  * Fix size of vertical flow modules.
  * Fix unexpected node jumping when dragging new connections.
  * Fix various minor visual alignment/sizing issues.
  * Highlight connected edges on port hover.
  * Improve appearance of graphs with circle nodes.
  * Improve text rendering at high zoom.
  * Improve update performance.
  * Preserve selection for quickly making several connections.
  * Upgrade to waf 2.0.19

 -- David Robillard <d@drobilla.net>  Thu, 09 Apr 2020 11:45:01 +0000

ganv (1.4.2) stable; urgency=medium

  * Fix bug where edges would not update when nodes are moved after the canvas
    is cleared (fix stuck connections in Patchage after refresh).
  * Upgrade to waf 1.7.16

 -- David Robillard <d@drobilla.net>  Fri, 08 Aug 2014 22:24:33 +0000

ganv (1.4.0) stable; urgency=medium

  * Add Connection::set_curved()
  * Add ability to select connections by their handles, either individually or